fix spacing and initialize files for search results

--- a/app/(loggedIn)/dashboard/page.module.css
+++ b/app/(loggedIn)/dashboard/page.module.css
@@ -34,6 +34,8 @@
     border-radius: 15px;
     margin: 0px 0px 10px 0px;
     background-color: var(--dashboard-front);
+    display: grid;
+    grid-template-rows: auto 1fr;
 }
 
 .managementcontainer {
