--- a/app/ui/loggedIn/dashboardComponents/search/searchbar.module.css
+++ b/app/ui/loggedIn/dashboardComponents/search/searchbar.module.css
@@ -1,10 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');
 
 .container {
+    grid-row: 1 / 2;
     display: grid;
     grid-template-rows: 50px 100px;
     grid-template-columns: 2% repeat(5, 16%) 18%;
-    height: 100px;
+    height: auto;
     width: 100%;
     align-items: center;
     padding-top: 20px;
